# sabot-tb-clinic

./: AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  test-build.yml
public/: splashscreen.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_icons.py  icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_fix_drug_classes.sql  0004_mapping_locations.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: alerts.rs  followups.rs  mapping.rs  mod.rs  patients.rs  screening.rs  settings.rs
src-tauri/src/db/: mod.rs  mysql.rs  sqlite.rs
src-tauri/src/models/: alert.rs  dispensing.rs  mod.rs  patient.rs  treatment.rs
src/components/active/: AlertBadge.vue  PatientCard.vue  ProgressBar.vue
src/components/layout/: AppHeader.vue  AppSidebar.vue
src/components/mapping/: MapCanvas.vue  MapFilters.vue
src/components/patient/: DischargeModal.vue  DispensingTable.vue  FollowupForm.vue  FollowupList.vue  SideEffectTracker.vue  TreatmentTimeline.vue
src/components/screening/: EnrollModal.vue  PatientTable.vue
src/components/shared/: ConfirmDialog.vue  (+3 more)
src/router/: index.ts
src/stores/: alerts.ts  mapping.ts  patient.ts  screening.ts  settings.ts
src/types/: alert.ts  dispensing.ts  mapping.ts  patient.ts  treatment.ts
src/views/: AboutView.vue  ActiveView.vue  DischargedView.vue  MappingView.vue  PatientDetailView.vue  ReportsView.vue  ScreeningView.vue  SettingsView.vue
